started making everything adaptive, main page (not windows yet) looks good up until 750x600px, didn't make it adaptive to big screens yet. Fixed tooltip in contact window looking weird and breaking on different resolution. Fixed music names weird animation. Fixed static music names alignment

--- a/css/contact.css
+++ b/css/contact.css
@@ -62,12 +62,12 @@
 
 .copyTooltip::after{
   content: '';
-  width: 0.6vw;
-  height: 1.2vh;
+  width: 10px;
+  height: 10px;
 
   background-color: black;
   position: absolute;
-  top: 3vh;
+  top: 80%;
   right: 50%;
 
   transform: translateX(50%) rotate(45deg);
