--- a/css/panel.css
+++ b/css/panel.css
@@ -6,6 +6,7 @@
   position: relative;
   z-index: 3;
   height: 7vh;
+  min-height: 46px;
   width: 100vw;
   background-color: white;
 
@@ -96,13 +97,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4vw;
-}
-
-.middlePlayerSide{
-  display: flex;
-  align-items: center;
-  gap: 40px;
+  gap: 60px;
 }
 
 .musicBtn{
